IaC/digitalocean/kubernetes/golb/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golb-api
  namespace: golb-test
spec:
  replicas: 3
  selector:
    matchLabels:
      role: golb-api
  template:
    metadata:
      labels:
        role: golb-api
    spec:
      imagePullSecrets:
      - name: docker-cfg
      containers:
      - name: golb-api
        image: registry.digitalocean.com/golb-repository/api-go-cms:0.0.1
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: golb-api
  namespace: golb-test
spec:
  selector:
    role: golb-api
  ports:
  - name: db
    port: 3000
    targetPort: 3000
