IaC/digitalocean/kubernetes/golb/blog-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-ui
  namespace: golb-test
spec:
  replicas: 3
  selector:
    matchLabels:
      role: blog-ui
  template:
    metadata:
      labels:
        role: blog-ui
    spec:
      imagePullSecrets:
      - name: docker-cfg
      containers:
      - name: blog-ui
        image: registry.digitalocean.com/golb-repository/ui-vue-cms:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blog-ui
  namespace: golb-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    role: blog-ui
